syntax = "proto3";

package PokemonGo.RocketAPI.GeneratedCode;

message Request {
  int32 unknown1 = 1;
  int64 rpc_id = 3;
  repeated Requests requests = 4;
  Unknown6 unknown6 = 6;
  double latitude = 7;
  double longitude = 8;
  double altitude = 9;
  AuthInfo auth = 10;
  int64 unknown12 = 12;

  message Requests {
    int32 type = 1;
    Unknown3 message = 2;
  }

  message Unknown3 {
    string unknown4 = 1;
  }

  message Unknown6 {
    int32 unknown1 = 1;
    Unknown2 unknown2 = 2;

    message Unknown2 {
      bytes unknown1 = 1;
    }

  }
  
  message AuthInfo {
    string provider = 1;
    JWT token = 2;

    message JWT {
      string contents = 1;
      int32 unknown13  = 2;
    }
  }
}